# dns

./: Cargo.toml
src/: hosts.rs  lib.rs  util.rs
src/client/: mod.rs
src/msg/: label.rs  mod.rs
src/types/: a.rs  aaaa.rs  cname.rs  mod.rs  rfc3597.rs  svcb.rs
src/types/edns/: edns0.rs  mod.rs
