[package]
name = "dns"
version = "0.1.0"
edition = "2021"
authors = ["cuti <cuti0738@gmail.com>"]
license = "MIT"
homepage = "https://github.com/LemangK/dns"
repository = "https://github.com/LemangK/dns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_idna = ["unic-idna"]

[dependencies]
base64 = "0.21.0"
ipnetwork = "0.20.0"
tracing = "0.1.37"
smallstr = "0.3.0"
bytes = "1.4.0"
byteorder = "1.4.3"
rand = "0.8.5"
hex = "0.4.3"
tokio = { version = "1.26.0", features = ["net", "io-util"] }
unic-idna = { version = "0.9.0", optional = true }